Fix z-index & update snapshots

--- a/frontend/styles/_settings.scss
+++ b/frontend/styles/_settings.scss
@@ -71,6 +71,7 @@ $z-tooltip: 92;
 $z-veil: 100;
 $z-above-veil: 101;
 $z-leaflet-above-panes: 500;
+$z-above-leaflet: 501;
 
 
 // colors
